# claude-lead-system

./: .gitignore  .mcp.json  .npmignore  .prettierignore  AGENT-DELEGATION-PLAN.md  ASSESSMENT_A_PLUS.md  ASSESSMENT_EXECUTIVE_SUMMARY.txt  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LEAD_SYSTEM_REVIEW_CORRECTED.md  LEAD_SYSTEM_REVIEW_PART1_APPLICATION_CODE.md  LEAD_SYSTEM_SESSION_WORKLOG.md  LEAD_SYSTEM_TOP_TO_BOTTOM_REVIEW.md  LICENSE  MANIFEST.md  README.md  SECURITY.md  STRATEGIC_ASSESSMENT_CAPSTONE.md  SUPPORT.md  demo.cast  demo.tape  docker-compose.yml  fix-benchmark.js  install.sh  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.planning/: gap1-in-process-display.md
agents/: master-architect.md  master-coder.md  master-researcher.md  role-planner.md  (+5 more)
hooks/: INSTALL_MANIFEST.json  README.md  agent-lifecycle.sh  agent-metrics.py  auto-review-dispatch.py  autonomous-dispatcher.sh  build-chain-dispatcher.py  chain-advance.py  check-inbox.sh  conflict-guard.sh  health-check.sh  hook_health.py  hook_utils.py  mcp-readiness.py  ops_aggregator.py  ops_sources.py  prompt_sync.py  pyproject.toml  read-efficiency-guard.py  self-heal.py  session-end.sh  session-register.sh  teammate-lifecycle.sh  terminal-heartbeat.sh  token-guard-config.json  token-guard.py  worker-status-push.sh
hooks/.github/workflows/: auto-lint.yml
hooks/claude_token_guard/: cli.py
hooks/lib/: portable.sh
hooks/prompts/: task_preflight_checklist.md
(+608 files in other folders)
